clean layout code

--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -1,13 +1,6 @@
-.wrapper {
-  font-family: "Open Sans", sans-serif;
-}
-
-/* filter */
 .filter {
   margin: 2%;
-  margin: 2%;
   height: 200px;
-  background: transparent;
   background: rgb(93, 232, 148);
   background: linear-gradient(
    185deg,
@@ -20,6 +13,13 @@
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
+.navbar {
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+}
+
 h1 {
   font-size: 2.5rem;
   font-weight: 700;
@@ -29,13 +29,11 @@ h1 {
   color: #fff;
 }
 
-
-/* categories navbar */
-.navbar {
-  color: #fff;
-  display: flex;
-  flex-direction: row;
-  padding: 0;
+h2 {
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 15px;
 }
 
 a {
@@ -56,31 +54,15 @@ a:hover {
   font-weight: bold;
 }
 
-#a1 {
+#a1, #a3 {
   box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-}
-
-#a3 {
-  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-}
-
-/* all h2's */
-h2 {
-  font-weight: 700;
-  margin-top: 40px;
-  text-align: center;
-  margin-bottom: 0;
-  padding-bottom: 15px;
 }
 
 /* map section */
 .nearby {
   margin: 2% 5%;
-  color: black;
   /* background: rgb(93, 232, 148);
   background: linear-gradient(
     185deg,
@@ -93,27 +75,15 @@ h2 {
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58); */
 }
 
-.nearby h2 {
-  padding-top: 15px;
-  margin-bottom: 0;
-}
-
 app-map {
   padding: 20px;
-}
-
-img {
-  width: 100%;
-
-  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
 /* Category list */
 .card {
   border: none;
 }
+
 .card-text {
   display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -132,23 +102,11 @@ img {
 }
 
 
-@media only screen and (max-width: 768px) {
-
-  /* search input */
-  .input-group-append {
-    width: 80%;
-    margin-left: 10%;
-  }
-
-  /* all h2's */
-  h2 {
-    margin-top: 0;
-    font-size: 1.5rem;
-  }
+@media only screen and (min-width: 426px) and (max-width: 768px) {
 
   /* categories navbar */
   .navbar{
-    width: 80%;
+    width: 90%;
   }
 
   a {
@@ -156,43 +114,9 @@ img {
     height: 150px;
   }
 
-  /* nearby */
-  .map {
-    width: 85%;
-    padding-bottom: 50px;
-  }
-
-  .map a {
-    padding: 0;
-  }
-
-  /* listed items */
-  /* .list {
-    margin-top: 10px;
-  }
-
-  .list input {
-    margin-top: 0;
-    width: 50%;
-    margin-left: 20px;
-  }
-
-  .list p {
-    margin-left: 20px;
-    padding-top: 10px;
-  } */
-
 }
 
-@media only screen and (max-width: 376px) {
-
-  .input-group-append {
-    margin-bottom: 20px;
-  }
-
- span {
-    display: none;
-  }
+@media only screen and (max-width: 425px) {
 
   .navbar {
     display: flex;
@@ -207,56 +131,7 @@ img {
     padding: 5px;
   }
 
-  /* .list input {
-    margin-top: 0;
-    width: 50%;
-    margin-left: 20px;
-  }
-
-  .list p {
-    margin-left: 20px;
-    padding-top: 10px;
-  } */
-
 }
-
-@media only screen and (max-width: 601px) {
-
-  .input-group-append {
-    margin-top: 40px;
-    width: 80%;
-    margin-left: 10%;
-  }
-
-  .navbar{
-    width: 90%;
-  }
-
-  h2 {
-    font-size: 1.5rem;
-  }
-
-  .map {
-    width: 85%;
-    padding-bottom: 50px;
-  }
-
-  .map a {
-    padding: 0;
-  }
-
-  /* .list input {
-    margin-top: 0;
-    width: 50%;
-    margin-left: 20px;
-  }
-
-  .list p {
-    margin-left: 20px;
-    padding-top: 10px;
-  } */
-
-  }
 
 
 
