--- a/src/app/categories/events/events.component.css
+++ b/src/app/categories/events/events.component.css
@@ -1,12 +1,6 @@
-.wrapper {
-  font-family: "Open Sans", sans-serif;
-}
-
-/* filter */
 .filter {
   margin: 2%;
   height: 200px;
-  background: transparent;
   background: rgb(144, 100, 211);
   background: linear-gradient(
     0deg,
@@ -27,7 +21,6 @@ h1 {
   margin-top: 30px;
   color: #ffffff;
 }
-
 
 /* categories navbar */
 .navbar {
@@ -55,13 +48,7 @@ a:hover {
   font-weight: bold;
 }
 
-#a1 {
-  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-}
-
-#a3 {
+#a1, #a3 {
   box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
@@ -69,31 +56,13 @@ a:hover {
 
 /* map */
 .nearby {
-  padding-bottom: 30px;
-  color: black;
   margin: 2% 5%;
   /* background: rgb(93, 232, 148);
   background: linear-gradient(
   185deg,
   rgba(129, 238, 115, 0.675) 12%,
   rgb(74, 189, 101) 79%
-  );
-
-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
--webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
--moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58); */
-}
-
-h2 {
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 0;
-  padding-bottom: 15px;
-}
-
-.nearby h2 {
-  padding-top: 15px;
-  margin-bottom: 0;
+  ); */
 }
 
 .nearby a {
@@ -121,16 +90,6 @@ h2 {
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
 
-  /* all h2's */
-  h2 {
-    margin-top: 0;
-    font-size: 1.5rem;
-  }
-
-
-  h2 {
-    font-size: 1.5rem;
-  }
 
 }
 
@@ -148,6 +107,5 @@ h2 {
     margin: 5px 0;
     padding: 5px;
   }
-
 
 }
