--- a/src/app/categories/places/places.component.html
+++ b/src/app/categories/places/places.component.html
@@ -1,4 +1,5 @@
 <section class="wrapper">
+
   <section class="filter">
     <div class="row">
       <div class="col-4">
@@ -8,18 +9,17 @@
       </div>
       <div class="col-8">
         <nav class="navbar">
-          <a id="a1"><p>Ravintolat</p></a>
-          <a id="a2"><p>Ostokset</p></a>
-          <a id="a3"><p>Majoitus</p></a>
-          <a id="a4"><p>Tilat<br> & Tapahtumapaikat</p></a>
+          <a id="koho"><p>Ravintolat</p></a>
+          <a><p>Ostokset</p></a>
+          <a id="koho"><p>Majoitus</p></a>
+          <a><p>Tilat<br> & Tapahtumapaikat</p></a>
         </nav>
       </div>
     </div>
   </section>
 
-
   <section class="nearby">
-      <app-map></app-map>
+    <app-map></app-map>
   </section>
 
   <div class="card mb-3" style="max-width: 900px; ">
