--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,12 +1,4 @@
 <section class="wrapper">
-  <!-- <div class="input-group-append">
-    <input type="search"
-    class="form-control"
-    placeholder="Etsi.."/>
-    <button class="btn btn-sm btn-light" type="button">
-    <i class="fas fa-search"></i>
-  </button>
-  </div> -->
 
   <section class="top">
     <div class="row">
@@ -42,21 +34,6 @@
     </div>
   </section>
 
-  <!-- <div class="row">
-    <div class="events">
-      <a href=""><img src="https://cdn.pixabay.com/photo/2016/11/18/17/47/iphone-1836071_960_720.jpg"></a>
-      <h2>Events</h2>
-    </div>
-    <div class="places">
-      <a href=""><img src="https://cdn.pixabay.com/photo/2019/05/08/22/01/helsinki-cathedral-4189821_960_720.jpg"></a>
-      <h2>Places</h2>
-    </div>
-    <div class="activities">
-      <a href=""><img src="https://digital.ihg.com/is/image/ihg/holiday-inn-helsinki-6581319389-2x1?wid=2400&hei=1200&qlt=85,0&resMode=sharp2&op_usm=1.75,0.9,2,0&qlt=85,0&resMode=sharp2&op_usm=1.75,0.9,2,0"></a>
-      <h2>Activities</h2>
-    </div>
-  </div> -->
-
   <section class="nearby">
     <label id="desktop">Tutki ympäristöäsi kartan avulla</label>
     <h2 id="mobile">Lähellä</h2>
@@ -65,7 +42,9 @@
 
   <section class="trending">
     <div class="row">
-      <div class="col-6"></div>
+      <div class="col-6">
+
+      </div>
       <div class="col-6">
         <h2>
           Suosituinta<br />
