clean layout code (categories)

--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -79,7 +79,7 @@ app-map {
   padding: 20px;
 }
 
-/* Category list */
+/* list section*/
 .card {
   border: none;
 }
@@ -132,6 +132,3 @@ app-map {
   }
 
 }
-
-
-
