--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,4 @@
-
-  <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
-    <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
-      ></agm-marker>
+  <agm-map [zoom]="16" [latitude]="lat" [longitude]="lng">
+    <agm-marker [latitude]="lat" [longitude]="lng" [markerDraggable]="true">
+    </agm-marker>
   </agm-map>
