create false routing and testing button

--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -48,6 +48,8 @@
             <small class="text-muted">{{event.location.address.street_address}}</small>
           </p>
         </div>
+        <!-- VÄLIAIKAINEN NAPPULA -->
+        <button routerLink="/event-details">Tutustu lisää!</button>
       </div>
     </div>
   </div>
