--- a/src/app/categories/events/eventDetails/event-details/event-details.component.html
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.html
@@ -1,1 +1,7 @@
-<p>event-details works!</p>
+<section class="wrapper">
+    <p>WORKS</p>
+
+ <section class="nearby">
+      <!-- <app-map></app-map> -->
+  </section>
+</section>
