--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -49,7 +49,7 @@
           </p>
         </div>
         <!-- VÄLIAIKAINEN NAPPULA -->
-        <button routerLink="/event-details">Tutustu lisää!</button>
+        <button routerLink="/event-details/{{event.id}}">Tutustu lisää!</button>
       </div>
     </div>
   </div>
