style event details component

--- a/src/app/categories/events/eventDetails/event-details/event-details.component.html
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.html
@@ -1,4 +1,4 @@
-<section class="wrapper">
+
     <div *ngIf="currentEvent">
       <div class="card-img-wrapper">
         <div *ngIf="currentEvent.description.images.length > 0; else elseBlock">
@@ -7,32 +7,20 @@
           <ng-template #elseBlock>
             <img src="" alt="">
           </ng-template>
-
-          <h1>{{currentEvent.name.fi}}</h1>
-          <div class="col-md-8">
-            <div class="card-body">
-              <p class="card-text mb-0">
-                <small class="text-muted">{{currentEvent.event_dates.starting_day | date : 'dd/MM/yyyy HH:mm'}}</small>
-              </p>
-              <p class="card-text mb-0"  >
-                {{currentEvent.description.body | stripHTML}}
-              </p>
-              <p class="card-text">
-                <small class="text-muted">{{currentEvent.location.address.street_address}}</small>
-              </p>
-            </div>
-
-          </div>
         </div>
-    </div>
-
-
-
+        <section class="wrapper">
+          <h1>{{currentEvent.name.fi}}</h1>
+          <p> {{currentEvent.description.body | stripHTML}} </p>
+          <p><strong>Missä: </strong> {{currentEvent.location.address.street_address}}</p>
+          <p><strong>Milloin: </strong> {{currentEvent.event_dates.starting_day | date : 'dd/MM/yyyy'}}</p>
+          <a href="{{currentEvent.info_url}}" class="btn btn-outline-primary" role="button" aria-pressed="true">Lue lisää</a>
 
 
  <section class="nearby">
       <!-- <app-map></app-map> -->
   </section>
 
+    <!-- <button routerlink="events" > Back </button> -->
 
+</section>
 
