--- a/src/app/categories/events/eventDetails/event-details/event-details.component.css
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.css
@@ -1,13 +1,5 @@
-.card-img-wrapper {
-  width: 100%;
-  height: 400px;
-  overflow: hidden;
-  background-size: cover;
-  background-position: center center;
-}
-
-.wrapper {
-  padding: 1rem;
+.container {
+  margin-top: 2rem;
 }
 
 
