--- a/src/app/categories/events/eventDetails/event-details/event-details.component.html
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.html
@@ -1,26 +1,32 @@
+<div class="container">
+  <!--  image left  -->
+  <div *ngIf="currentEvent">
+  <div class="row">
+    <div class="col-md-6">
+      <div *ngIf="currentEvent.description.images.length > 0; else elseBlock">
+      <img src={{currentEvent.description.images[0].url}} alt="event-picture" class="w-100" />
+    </div>
+    <ng-template #elseBlock>
+      <img src="" alt="">
+    </ng-template>
+  </div>
+    <!-- /.col-md-6 -->
+    <div class="col-md-6">
 
-    <div *ngIf="currentEvent">
-      <div class="card-img-wrapper">
-        <div *ngIf="currentEvent.description.images.length > 0; else elseBlock">
-            <img src={{currentEvent.description.images[0].url}} alt="event-picture" class="card-img-top"/>
-          </div>
-          <ng-template #elseBlock>
-            <img src="" alt="">
-          </ng-template>
-        </div>
-        <section class="wrapper">
-          <h1>{{currentEvent.name.fi}}</h1>
-          <p> {{currentEvent.description.body | stripHTML}} </p>
+      <div class="row align-items-center h-100">
+        <div class="col">
+          <h1 class="display-3">{{currentEvent.name.fi}}</h1>
           <p><strong>Missä: </strong> {{currentEvent.location.address.street_address}}</p>
           <p><strong>Milloin: </strong> {{currentEvent.event_dates.starting_day | date : 'dd/MM/yyyy'}}</p>
           <a href="{{currentEvent.info_url}}" class="btn btn-outline-primary" role="button" aria-pressed="true">Lue lisää</a>
+        </div>
+        </div>
 
+      </div>
+      <p class="mt-3"> {{currentEvent.description.body | stripHTML}} </p>
 
- <section class="nearby">
-      <!-- <app-map></app-map> -->
-  </section>
+      <section class="nearby">
+        <!-- <app-map></app-map> -->
+    </section>
 
-    <!-- <button routerlink="events" > Back </button> -->
-
-</section>
 
