--- a/src/app/categories/events/eventDetails/event-details/event-details.component.html
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.html
@@ -19,12 +19,17 @@
           <p><strong>Missä: </strong> {{currentEvent.location.address.street_address}}, {{currentEvent.location.address.locality}}</p>
           <p><strong>Milloin: </strong> {{currentEvent.event_dates.starting_day | date : 'dd/MM/yyyy'}}</p>
           <a href="{{currentEvent.info_url}}" class="btn btn-outline-primary" role="button" aria-pressed="true">Lue lisää</a>
-          <i class="bi bi-heart"></i>
+          <!-- <a class="btn btn-outline-primary"  class="bi bi-heart" role="button" aria-pressed="true">Lue lisää</a> -->
+          <!-- <i class="bi bi-heart"></i> -->
+
+          <!-- <a type="button" class="btn btn-outline-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a> -->
+
         </div>
         </div>
 
       </div>
       <p class="mt-3"> {{currentEvent.description.body | stripHTML}} </p>
+      <a type="button" class="btn btn-outline-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
 
       <section class="nearby">
         <!-- <app-map></app-map> -->
