--- a/src/app/categories/events/events.component.css
+++ b/src/app/categories/events/events.component.css
@@ -30,7 +30,7 @@ h1 {
   padding: 0;
 }
 
-a {
+.navbar a {
   background: transparent;
   width: 25%;
   height: 200px;
@@ -39,7 +39,7 @@ a {
   text-decoration: none;
 }
 
-a:hover {
+.navbar a:hover {
   background-color: rgba(233, 223, 139, 0.683);
 }
 
@@ -86,6 +86,11 @@ a:hover {
 }
 .card-body h5{
   font-weight: bolder !important;
+}
+
+.card-body {
+  /* text-decoration: none; */
+  color: black;
 }
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
