add details for place and activity

--- a/src/app/categories/activities/activities.component.html
+++ b/src/app/categories/activities/activities.component.html
@@ -45,6 +45,7 @@
             <p class="card-text">
               <small class="text-muted">{{activity.location.address.street_address}}</small>
             </p>
+            <button routerLink="/activity-details/{{activity.id}}">Tutustu lisää!</button>
           </div>
         </div>
       </div>
