fix css and add back button for categories

--- a/src/app/categories/events/eventDetails/event-details/event-details.component.html
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/categories/events" type="button" class="btn btn-outline-secondary">Takaisin</a>
 <div class="container">
   <!--  image left  -->
   <div *ngIf="currentEvent">
