--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -23,6 +23,7 @@
   </section>
 
 <div class="container">
+  <h2>Kaikki tapahtumat</h2>
   <div class="card mb-3" style="max-width: 900px; ">
     <div class="row g-0" *ngFor="let event of events.slice(0,7)">
       <div class="col-md-4">
