--- a/src/app/categories/places/placeDetails/place-details/place-details.component.html
+++ b/src/app/categories/places/placeDetails/place-details/place-details.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/categories/places" type="button" class="btn btn-outline-secondary">Takaisin</a>
 <div class="container">
   <div *ngIf="currentPlace">
     <div class="row">
