--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -30,13 +30,11 @@ h1 {
 }
 
 h2 {
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 0;
-  padding-bottom: 15px;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
 }
 
-a {
+.navbar a {
   background: transparent;
   width: 25%;
   height: 200px;
@@ -45,7 +43,7 @@ a {
   text-decoration: none;
 }
 
-a:hover {
+.navbar a:hover {
   background-color: rgba(157, 243, 191, 0.675);
 }
 
@@ -75,7 +73,7 @@ a:hover {
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58); */
 }
 
-app-map {
+.app-map {
   padding: 20px;
 }
 
@@ -99,6 +97,11 @@ app-map {
 
 .card-body h5{
   font-weight: bolder !important;
+}
+
+.card-body {
+  /* text-decoration: none; */
+  color: black;
 }
 
 
