--- a/src/app/categories/activities/activityDetails/activity-details/activity-details.component.html
+++ b/src/app/categories/activities/activityDetails/activity-details/activity-details.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/categories/activities" type="button" class="btn btn-outline-secondary">Takaisin</a>
 <div class="container">
   <div *ngIf="currentActivity">
     <div class="row">
