--- a/src/app/categories/events/events.component.css
+++ b/src/app/categories/events/events.component.css
@@ -22,6 +22,11 @@ h1 {
   color: #ffffff;
 }
 
+h2 {
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+}
+
 /* categories navbar */
 .navbar {
   color: #ffffff;
