--- a/src/app/categories/events/eventDetails/event-details/event-details.component.html
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.html
@@ -14,14 +14,14 @@
       <div class="col-md-6">
           <div class="row align-items-center h-100">
                 <div class="col">
-                  <h1 class="display-3">{{currentEvent.name.fi}}</h1>
+                  <h1 class="display-4">{{currentEvent.name.fi}}</h1>
                   <p><strong>Missä: </strong> {{currentEvent.location.address.street_address}}, {{currentEvent.location.address.locality}}</p>
                   <p><strong>Milloin: </strong> {{currentEvent.event_dates.starting_day | date : 'dd/MM/yyyy'}}</p>
                   <a href="{{currentEvent.info_url}}" class="btn btn-outline-primary" role="button" aria-pressed="true">Verkkosivu</a>
                 </div>
           </div>
       </div>
-        <p class="mt-3"> {{currentEvent.description.body | stripHTML}} </p>
+        <p class="mt-3 lead"> {{currentEvent.description.body | stripHTML}} </p>
         <a type="button" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
 
     <section class="nearby">
