--- a/src/app/categories/places/placeDetails/place-details/place-details.component.html
+++ b/src/app/categories/places/placeDetails/place-details/place-details.component.html
@@ -13,13 +13,13 @@
       <div class="col-md-6">
         <div class="row align-items-center h-100">
             <div class="col">
-                <h1 class="display-3">{{currentPlace.name.fi}}</h1>
+                <h1 class="display-4">{{currentPlace.name.fi}}</h1>
                 <p><strong>Missä: </strong> {{currentPlace.location.address.street_address}}, {{currentPlace.location.address.locality}}</p>
                 <a href="{{currentPlace.info_url}}" class="btn btn-outline-primary" role="button" aria-pressed="true">Verkkosivu</a>
             </div>
         </div>
       </div>
-      <p class="mt-3"> {{currentPlace.description.body | stripHTML}} </p>
+      <p class="mt-3 lead"> {{currentPlace.description.body | stripHTML}} </p>
       <a type="button" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
     </div>
   </div>
