Revert "Merge branch 'master' of https://github.com/eliaspoylio/sirka"
This reverts commit be816042a7a6ab80028ce4171145db85b0f23f0e, reversing
changes made to 48949b66df845d5f5c09e886175501666a4be5a4.

--- a/src/app/categories/events/events.component.css
+++ b/src/app/categories/events/events.component.css
@@ -22,11 +22,6 @@ h1 {
   color: #ffffff;
 }
 
-h2 {
-  margin-top: 2rem;
-  padding-bottom: 1rem;
-}
-
 /* categories navbar */
 .navbar {
   color: #ffffff;
@@ -35,7 +30,7 @@ h2 {
   padding: 0;
 }
 
-.navbar a {
+a {
   background: transparent;
   width: 25%;
   height: 200px;
@@ -44,7 +39,7 @@ h2 {
   text-decoration: none;
 }
 
-.navbar a:hover {
+a:hover {
   background-color: rgba(233, 223, 139, 0.683);
 }
 
@@ -91,11 +86,6 @@ h2 {
 }
 .card-body h5{
   font-weight: bolder !important;
-}
-
-.card-body {
-  /* text-decoration: none; */
-  color: black;
 }
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
