--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -22,8 +22,6 @@
       <app-map></app-map>
   </section>
 
-<div class="container">
-  <h2>Kaikki tapahtumat</h2>
   <div class="card mb-3" style="max-width: 900px; ">
     <div class="row g-0" *ngFor="let event of events.slice(0,7)">
       <div class="col-md-4">
@@ -37,7 +35,7 @@
       </div>
       </div>
       <div class="col-md-8">
-        <a class="card-body" routerLink="/event-details/{{event.id}}">
+        <div class="card-body">
           <p class="card-text mb-0">
             <small class="text-muted">{{event.event_dates.starting_day | date : 'dd/MM/yyyy HH:mm'}}</small>
           </p>
@@ -48,11 +46,9 @@
           <p class="card-text">
             <small class="text-muted">{{event.location.address.street_address}}</small>
           </p>
-        </a>
-        <!-- VÄLIAIKAINEN NAPPULA -->
-        <!-- <button routerLink="/event-details/{{event.id}}">Tutustu lisää!</button> -->
+        </div>
       </div>
     </div>
   </div>
-</div>
+
 </section>
