--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -30,11 +30,13 @@ h1 {
 }
 
 h2 {
-  margin-top: 2rem;
-  padding-bottom: 1rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 15px;
 }
 
-.navbar a {
+a {
   background: transparent;
   width: 25%;
   height: 200px;
@@ -43,7 +45,7 @@ h2 {
   text-decoration: none;
 }
 
-.navbar a:hover {
+a:hover {
   background-color: rgba(157, 243, 191, 0.675);
 }
 
@@ -73,7 +75,7 @@ h2 {
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58); */
 }
 
-.app-map {
+app-map {
   padding: 20px;
 }
 
@@ -97,11 +99,6 @@ h2 {
 
 .card-body h5{
   font-weight: bolder !important;
-}
-
-.card-body {
-  /* text-decoration: none; */
-  color: black;
 }
 
 
