--- a/src/app/categories/activities/activities.component.html
+++ b/src/app/categories/activities/activities.component.html
@@ -23,7 +23,6 @@
       <app-map></app-map>
   </section>
 
-  <div class="container">
     <h2>Kaikki aktiviteetit</h2>
     <div class="card mb-3" style="max-width: 900px; ">
       <div class="row g-0" *ngFor="let activity of activities.slice(0, 7)">
@@ -38,7 +37,7 @@
         </div>
         </div>
         <div class="col-md-8">
-          <a class="card-body" routerLink="/activity-details/{{activity.id}}">
+          <div class="card-body">
             <h5 class="card-title mb-0">{{activity.name.fi}}</h5>
             <p class="card-text mb-0"  >
               {{activity.description.body | stripHTML}}
@@ -46,14 +45,10 @@
             <p class="card-text">
               <small class="text-muted">{{activity.location.address.street_address}}</small>
             </p>
-            <!-- <button routerLink="/activity-details/{{activity.id}}">Tutustu lisää!</button> -->
-          </a>
+          </div>
         </div>
       </div>
     </div>
-    </div>
-
-
 
 
 </section>
