--- a/src/app/categories/places/places.component.css
+++ b/src/app/categories/places/places.component.css
@@ -22,8 +22,11 @@ h1 {
 }
 
 h2 {
-  margin-top: 2rem;
-  padding-bottom: 1rem;
+  font-weight: 700;
+  margin-top: 40px;
+  text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 15px;
 }
 
 .navbar {
@@ -33,7 +36,7 @@ h2 {
   padding: 0;
 }
 
-.navbar a {
+a {
   background: transparent;
   width: 25%;
   height: 200px;
@@ -48,7 +51,7 @@ h2 {
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
-.navbar a:hover {
+a:hover {
   background-color: rgba(154, 218, 218, 0.675);
 }
 
@@ -94,10 +97,6 @@ h2 {
   max-width: 300px;
 }
 
-.card-body {
-  /* text-decoration: none; */
-  color: black;
-}
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
 
