--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -13,11 +13,52 @@
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
-.navbar {
-  color: #fff;
+a {
+  text-decoration: none;
+}
+
+.box p {
+  color: #ffffff;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding-top: 35%;
+  font-size: 1rem;
+}
+
+.box {
+  margin: auto;
   display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
   padding: 0;
+}
+
+.box1, .box3 {
+  height: 200px;
+  width: 100%;
+  background: transparent;
+  /* background: rgb(144, 100, 211);
+  background: linear-gradient(
+    0deg,
+    rgba(144, 100, 211, 1) 0%,
+    rgba(255, 112, 169, 0.6834532374100719) 100%
+  ); */
+
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+}
+
+.box2 {
+  height: 200px;
+  background: transparent;
+  width: 100%;
+}
+
+:hover.box1, :hover.box2, :hover.box3 {
+  background-color: #89ee96;
 }
 
 h1 {
@@ -25,37 +66,13 @@ h1 {
   font-weight: 700;
   text-align: center;
   padding: 30px;
-  margin-top: 30px;
+  margin-top: 35px;
   color: #fff;
 }
 
 h2 {
   margin-top: 2rem;
   padding-bottom: 1rem;
-}
-
-.navbar a {
-  background: transparent;
-  width: 25%;
-  height: 200px;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-
-.navbar a:hover {
-  background-color: rgba(157, 243, 191, 0.675);
-}
-
-.navbar p {
-  padding-top: 30%;
-  font-weight: bold;
-}
-
-#a1, #a3 {
-  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
 /* map section */
@@ -107,11 +124,6 @@ h2 {
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
 
-  /* categories navbar */
-  .navbar{
-    width: 90%;
-  }
-
   a {
     padding: 5px;
     height: 150px;
@@ -121,12 +133,7 @@ h2 {
 
 @media only screen and (max-width: 425px) {
 
-  .navbar {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .navbar a {
+  a {
     height: 40px;
     width: 100%;
     text-align: center;
