--- a/src/app/categories/places/places.component.css
+++ b/src/app/categories/places/places.component.css
@@ -13,48 +13,66 @@
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
-h1 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  text-align: center;
-  color: #ffffff;
-  padding-top: 15%;
-}
-
-h2 {
-  margin-top: 2rem;
-  padding-bottom: 1rem;
-}
-
-.navbar {
-  color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  padding: 0;
-}
-
-.navbar a {
-  background: transparent;
-  width: 25%;
-  height: 200px;
-  text-align: center;
-  text-transform: uppercase;
+a {
   text-decoration: none;
 }
 
-#koho {
+.box p {
+  color: #ffffff;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding-top: 35%;
+  font-size: 1rem;
+}
+
+.box {
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 0;
+}
+
+.box1, .box3 {
+  height: 200px;
+  width: 100%;
+  background: transparent;
+  /* background: rgb(144, 100, 211);
+  background: linear-gradient(
+    0deg,
+    rgba(144, 100, 211, 1) 0%,
+    rgba(255, 112, 169, 0.6834532374100719) 100%
+  ); */
+
   box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
-.navbar a:hover {
-  background-color: rgba(154, 218, 218, 0.675);
+.box2 {
+  height: 200px;
+  background: transparent;
+  width: 100%;
 }
 
-.navbar p {
-  padding-top: 30%;
-  font-weight: bold;
+:hover.box1, :hover.box2, :hover.box3 {
+  background-color: #6dc4cf;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 30px;
+  margin-top: 30px;
+  color: #fff;
+}
+
+h2 {
+  margin-top: 2rem;
+  padding-bottom: 1rem;
 }
 
 /* map section */
@@ -101,15 +119,9 @@ h2 {
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
 
-  /* all h2's */
   h2 {
     margin-top: 0;
     font-size: 1.5rem;
-  }
-
-  /* filter */
-  .navbar{
-    width: 80%;
   }
 
   a {
@@ -117,26 +129,11 @@ h2 {
     height: 150px;
   }
 
-  /* nearby */
-  .map {
-    width: 85%;
-    padding-bottom: 50px;
-  }
-
-  .map a {
-    padding: 0;
-  }
-
 }
 
 @media only screen and (max-width: 425px) {
 
-  .navbar {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .navbar a {
+  a {
     height: 40px;
     width: 100%;
     text-align: center;
