--- a/src/app/categories/places/places.component.html
+++ b/src/app/categories/places/places.component.html
@@ -1,19 +1,32 @@
 <section class="wrapper">
-
   <section class="filter">
     <div class="row">
-      <div class="col-4">
+      <div class="col-lg-6">
         <h1>
-          Paikat
+          Tutki paikkoja ympärilläsi
         </h1>
       </div>
-      <div class="col-8">
-        <nav class="navbar">
-          <a id="koho"><p>Ravintolat</p></a>
-          <a><p>Ostokset</p></a>
-          <a id="koho"><p>Majoitus</p></a>
-          <a><p>Tilat<br> & Tapahtumapaikat</p></a>
-        </nav>
+      <div class="col-lg-6">
+        <div class="box">
+          <a
+            class="box1"
+            routerLink="/categories/events"
+            routerLinkActive="active"
+            ><p>Tapahtumat</p></a
+          >
+          <a
+            class="box2"
+            routerLink="/categories/activities"
+            routerLinkActive="active"
+            ><p>Aktiviteetit</p></a
+          >
+          <a
+            class="box3"
+            routerLink="/categories/places"
+            routerLinkActive="active"
+            ><p>Paikat</p></a
+          >
+        </div>
       </div>
     </div>
   </section>
@@ -24,7 +37,7 @@
 
   <div class="container">
     <h2>Kaikki paikat</h2>
-  <div class="card mb-3" style="max-width: 900px; ">
+  <div class="card mb-3" style="max-width: 900px;">
     <div class="row g-0" *ngFor="let place of places.slice(0,7)">
       <div class="col-md-4">
       <div class="card-img-wrapper">
