--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -23,10 +23,10 @@
   </section>
 
 <div class="container">
-  <h2>Kaikki tapahtumat</h2>
-  <div class="card mb-1" style="max-width: 900px; ">
-    <div class="searchEvent">
-      <input type="text" class="form-control mb-8" name="search"[(ngModel)]="searchText" autocomplete="off" placeholder="Search Event">
+  <h2 class="otsikko">Kaikki tapahtumat</h2>
+  <div class="card" style="max-width: 900px; ">
+    <div class="searchEvent mb-3">
+      <input type="text" class="form-control" name="search"[(ngModel)]="searchText" autocomplete="off" placeholder="Etsi Tapahtumia">
     </div>
     <div class="row g-0" *ngFor="let event of events | filter: searchText | slice: 0:100">
       <div class="col-md-4">
