--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -26,7 +26,7 @@
   <h2 class="otsikko">Kaikki tapahtumat</h2>
   <div class="card" style="max-width: 900px; ">
     <div class="searchEvent mb-3">
-      <input type="text" class="form-control" name="search"[(ngModel)]="searchText" autocomplete="off" placeholder="Etsi Tapahtumia">
+      <input type="text" class="form-control" name="search"[(ngModel)]="searchText" autocomplete="off" placeholder="Etsi tapahtumia">
     </div>
     <div class="row g-0" *ngFor="let event of events | filter: searchText | slice: 0:100">
       <div class="col-md-4">
