--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -34,6 +34,10 @@ h2 {
   padding-bottom: 1rem;
 }
 
+.otsikko {
+  padding-bottom: 1vw;
+}
+
 .navbar a {
   background: transparent;
   width: 25%;
